[gd_scene load_steps=18 format=2]

[ext_resource path="res://Font/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/BackBtn.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/GameUI/planet_01.png" type="Texture" id=4]
[ext_resource path="res://images/icons8-link-100.png" type="Texture" id=5]
[ext_resource path="res://Scenes/SettingsMenu.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=3]
size = 108
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 35
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.705882, 0.984314, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_bottom_right = 10
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.992157, 0.705882, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_bottom_right = 10
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="DynamicFont" id=10]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.705882, 0.984314, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_bottom_right = 10
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 0.792157, 0.376471, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_bottom_right = 10
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="DynamicFont" id=17]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=15]
default_font = SubResource( 14 )
Label/fonts/font = SubResource( 17 )

[sub_resource type="DynamicFont" id=16]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]

[node name="Default" type="Sprite" parent="."]
visible = false
position = Vector2( 908, 366 )
scale = Vector2( 0.699906, 0.699906 )
texture = ExtResource( 4 )

[node name="SettingsMenu" type="Control" parent="."]
unique_name_in_owner = true
margin_left = 836.5
margin_top = 420.0
margin_right = 876.5
margin_bottom = 460.0
script = ExtResource( 2 )

[node name="RichTextLabel" type="Label" parent="SettingsMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -444.5
margin_top = -349.0
margin_right = -34.5
margin_bottom = -221.0
rect_pivot_offset = Vector2( 171.5, 60 )
focus_mode = 2
custom_fonts/font = SubResource( 3 )
text = "Settings"
__meta__ = {
"_editor_description_": ""
}

[node name="PrivacyBtn" type="Button" parent="SettingsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -386.5
margin_top = -181.0
margin_right = -88.5
margin_bottom = -103.0
rect_pivot_offset = Vector2( 127, 44 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 2 )
text = "Privacy Policy"
icon = ExtResource( 5 )
icon_align = 2
expand_icon = true
__meta__ = {
"_editor_description_": ""
}

[node name="ClearProgress" type="Button" parent="SettingsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -386.5
margin_top = -52.0
margin_right = -81.5
margin_bottom = 26.0
rect_pivot_offset = Vector2( 127, 44 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Clear Progress !"
__meta__ = {
"_editor_description_": ""
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="SettingsMenu"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.0
margin_top = -34.0
margin_right = 42.0
margin_bottom = 69.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( -1.625, -2.125 )
rect_clip_content = true
theme = SubResource( 15 )
dialog_text = "You Are About to Lose All your Progress!"
dialog_hide_on_ok = false

[node name="CheckButton" type="CheckButton" parent="SettingsMenu"]
unique_name_in_owner = true
margin_left = -374.0
margin_top = 77.0
margin_right = -160.0
margin_bottom = 127.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 16 )
shortcut_in_tooltip = false
text = "All Levels Unlocked"

[node name="Node2D" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="SettingsMenu/PrivacyBtn" to="SettingsMenu" method="_on_PrivacyBtn_pressed"]
[connection signal="pressed" from="SettingsMenu/ClearProgress" to="SettingsMenu" method="_on_ClearProgress_pressed"]
[connection signal="confirmed" from="SettingsMenu/ConfirmationDialog" to="SettingsMenu" method="_on_ConfirmationDialog_confirmed"]
[connection signal="pressed" from="SettingsMenu/CheckButton" to="SettingsMenu" method="_on_CheckButton_pressed"]
